# exam-companion

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/data/: exam_report.md  export.rs  import.rs  mod.rs  student.csv
src/models/: app_state.rs  exam.rs  exam_event.rs  mod.rs  student.rs
src/ui/: exam_window.rs  home.rs  import.rs  mod.rs  status.rs  student_list.rs
src/ui/components/: exam_details_card.rs  mod.rs  notes_card.rs  student_details.rs  timer_card.rs
