[package]
name = "rust_summer26_05"
version = "0.1.0"
edition = "2024"

[dependencies]
gtk = { package = "gtk4", version = "0.9", features = ["v4_10"] }
adw = { package = "libadwaita", version = "0.7", features = ["v1_5"] }
serde = { version = "1.0.228", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
